swagger register-login docs
